--- a/i_papers.html
+++ b/i_papers.html
@@ -144,7 +144,7 @@
 
           [186] Konstantin Mishchenko, Grigory Malinovsky, Sebastian Stich and Peter Richtárik<br>
           <b>ProxSkip: Yes! Local gradient steps provably lead to communication acceleration! Finally!</b><br>
-          39th International Conference on Machine Learning (ICML 2022)<br>
+          <a href="https://proceedings.mlr.press/v162/mishchenko22b.html">39th International Conference on Machine Learning (ICML 2022)</a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2202.09357">arXiv</a>] [<a href="https://richtarik.org/talks/2022-ProxSkip-Lagrange_Workshop.pdf">slides</a>] [<a href="https://www.youtube.com/watch?v=OMVSzgsd7ZY">71 min video</a>] [code: ProxSkip, Scaffnew, SProxSkip, SplitSkip, Decentralized Scaffnew] <br>
           <br>
@@ -162,7 +162,7 @@
 
           [183] Peter Richtárik, Igor Sokolov, Ilyas Fatkhullin, Elnur Gasanov, Zhize Li and Eduard Gorbunov<br>
           <b>3PC: Three point compressors for communication-efficient distributed training and a better theory for lazy aggregation</b><br>
-          39th International Conference on Machine Learning (ICML 2022)<br>
+          <a href="https://proceedings.mlr.press/v162/richtarik22a.html">39th International Conference on Machine Learning (ICML 2022)</a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2202.00998">arXiv</a>] [code: 3PC, LAG, CLAG, EF21] <br>
           <br>
@@ -284,8 +284,8 @@
           <br>
 
           [164] Adil Salim, Lukang Sun and Peter Richtárik<br>
-          <b>Complexity analysis of Stein variational gradient descent under Talagrand's inequality T1</b><br>
-          39th International Conference on Machine Learning (ICML 2022)<br>
+          <b>A convergence theory for SVGD in the population limit under Talagrand’s inequality T1</b><br>
+          <a href="https://proceedings.mlr.press/v162/salim22a.html">39th International Conference on Machine Learning (ICML 2022)</a><br>
           [<a href="https://arxiv.org/abs/2106.03076">arXiv</a>] [code: SVGD]<br>
           <br>
 
@@ -298,7 +298,7 @@
 
           [162] Mher Safaryan, Rustem Islamov, Xun Qian and Peter Richtárik<br>
           <b>FedNL: Making Newton-type methods applicable to federated learning</b><br>
-          39th International Conference on Machine Learning (ICML 2022)<br>
+          <a href="https://proceedings.mlr.press/v162/safaryan22a.html">39th International Conference on Machine Learning (ICML 2022)</a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2106.02969">arXiv</a>] [code: FedNL, FedNL-PP, FedNL-CR, FedNL-LS, FedNL-BC, N0, NS]<br>
           <br>
@@ -366,7 +366,7 @@
 
           [152] Konstantin Mishchenko, Ahmed Khaled and Peter Richtárik<br>
           <b>Proximal and federated random reshuffling</b><br>
-          39th International Conference on Machine Learning (ICML 2022)<br>
+          <a href="https://proceedings.mlr.press/v162/mishchenko22a.html">39th International Conference on Machine Learning (ICML 2022)</a><br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.06704">arXiv</a>] [<a href="https://www.youtube.com/watch?v=aHAU6OYNoKA&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=40">8 min video</a>] [code:ProxRR, FedRR] <br>
