--- a/i_papers.html
+++ b/i_papers.html
@@ -607,7 +607,7 @@
           Peter Richtárik and Martin Takáč<br>
           <b>Distributed fixed point methods with compressed iterates</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/1912.09925">arXiv</a>]<br>
+          [<a href="https://arxiv.org/abs/1912.09925">arXiv</a>] [<a href="papers/DFPMCI-new.pdf">preprint</a>]<br>
           <br>
 
           [116] Samuel Horváth, Chen-Yu Ho, Ľudovít Horváth, Atal Narayan Sahu, Marco Canini and Peter Richtárik<br>
