--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,12 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [202] Laurent Condat and Peter Richtárik <br>
+          <b>RandProx: Primal-dual optimization algorithms with randomized proximal updates</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2207.12891">arXiv</a>] [code: RandProx, RandProx-FB, RandProx-LC, RandProx-CP, RandProx-ADMM, RandProx-DY] <br>
+          <br>
+
           [201] Grigory Malinovsky, Kai Yi and Peter Richtárik <br>
           <b>Variance reduced ProxSkip: Algorithm, theory and application to federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
@@ -164,7 +170,7 @@
           <b>3PC: Three point compressors for communication-efficient distributed training and a better theory for lazy aggregation</b><br>
           <a href="https://proceedings.mlr.press/v162/richtarik22a.html">39th International Conference on Machine Learning (ICML 2022)</a><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2202.00998">arXiv</a>] [code: 3PC, LAG, CLAG, EF21] <br>
+          [<a href="https://arxiv.org/abs/2202.00998">arXiv</a>] [<a href="https://icml.cc/media/PosterPDFs/ICML%202022/b6417f112bd27848533e54885b66c288_r5C1iLn.png">poster</a>] [code: 3PC, LAG, CLAG, EF21] <br>
           <br>
 
           [182] Haoyu Zhao, Boyue Li, Zhize Li, Peter Richtárik and Yuejie Chi<br>
@@ -300,7 +306,7 @@
           <b>FedNL: Making Newton-type methods applicable to federated learning</b><br>
           <a href="https://proceedings.mlr.press/v162/safaryan22a.html">39th International Conference on Machine Learning (ICML 2022)</a><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2106.02969">arXiv</a>] [code: FedNL, FedNL-PP, FedNL-CR, FedNL-LS, FedNL-BC, N0, NS]<br>
+          [<a href="https://arxiv.org/abs/2106.02969">arXiv</a>] [<a href="https://icml.cc/media/PosterPDFs/ICML%202022/7385db9a3f11415bc0e9e2625fae3734.png">poster</a>] [code: FedNL, FedNL-PP, FedNL-CR, FedNL-LS, FedNL-BC, N0, NS]<br>
           <br>
 
           [161] Grigory Malinovsky, Alibek Sailanbayev and Peter Richtárik<br>
