--- a/index.html
+++ b/index.html
@@ -44,6 +44,73 @@
         <div id="content">
 
 
+<h3>July 30, 2022</h3>
+<h1>On my way back to KAUST</h1>
+<br>
+
+
+I am now on my way back to KAUST. I'll stay for about a week and then take up some vacation.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>July 26, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2207.12891">
+"RandProx: Primal-Dual Optimization Algorithms with Randomized Proximal Updates"</a> -
+joint work with
+<a href="https://lcondat.github.io">Laurent Condat</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+Proximal splitting algorithms are well suited to solving large-scale nonsmooth optimization problems, in particular those arising in machine learning. We propose a new primal-dual algorithm, in which the dual update is randomized; equivalently, the proximity operator of one of the function in the problem is replaced by a stochastic oracle. For instance, some randomly chosen dual variables, instead of all, are updated at each iteration. Or, the proximity operator of a function is called with some small probability only. A nonsmooth variance-reduction technique is implemented so that the algorithm finds an exact minimizer of the general problem involving smooth and nonsmooth functions, possibly composed with linear operators. We derive linear convergence results in presence of strong convexity; these results are new even in the deterministic case, when our algorithms reverts to the recently proposed Primal-Dual Davis-Yin algorithm. Some randomized algorithms of the literature are also recovered as particular cases (e.g., Point-SAGA). But our randomization technique is general and encompasses many unbiased mechanisms beyond sampling and probabilistic updates, including compression. Since the convergence speed depends on the slowest among the primal and dual contraction mechanisms, the iteration complexity might remain the same when randomness is used. On the other hand, the computation complexity can be significantly reduced. Overall, randomness helps getting faster algorithms. This has long been known for stochastic-gradient-type algorithms, and our work shows that this fully applies in the more general primal-dual setting as well.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>July 12, 2022</h3>
+
+<h1>New York, Baltimore, Houston and Los Angeles</h1>
+
+Starting today, I'll be  on a tour of the US, giving a few talks and visiting/attending several places and conferences,
+including the Flatiron Institute in New York City, ICML in Baltimore, Rice University in Houston, and Los Angeles. <br> <br>
+
+At ICML,
+I gave two talks: one on our ProxSkip paper "ProxSkip: Yes! Local Gradient Steps Provably Lead to Communication Acceleration! Finally!" [<a href="https://proceedings.mlr.press/v162/mishchenko22b.html">paper</a>] [<a href="slides/ProxSkip-ICML-slides.pdf">slides</a>] [poster]
+[<a href="https://www.youtube.com/watch?v=OMVSzgsd7ZY">71 min talk</a>] [<a href="https://www.youtube.com/watch?v=yIF_l2g8rGY">90 min talk</a>], and the other one on our
+3PC paper "3PC: Three Point Compressors for Communication-Efficient Distributed Training and a Better Theory for Lazy Aggregation" [<a href="https://proceedings.mlr.press/v162/richtarik22a.html">paper</a>] [<a href="https://icml.cc/media/PosterPDFs/ICML%202022/b6417f112bd27848533e54885b66c288_r5C1iLn.png">poster</a>] [<a href="slides/3PC-ICML-slides.pdf">slides</a>].
+My team had three more accepted papers: "A Convergence Theory for SVGD in the Population Limit under Talagrand's Inequality T1" presented by <a href="https://adil-salim.github.io">Adil Salim</a>
+[<a href="https://proceedings.mlr.press/v162/salim22a.html">paper</a>] [<a href="https://icml.cc/media/icml-2022/Slides/17594.pdf">slides</a>],
+"FedNL: Making Newton-Type Methods Applicable to Federated Learning" presented by <a href="https://mher-safaryan.github.io">Mher Safaryan</a> [<a href="https://proceedings.mlr.press/v162/safaryan22a.html">paper</a>] [<a href="https://icml.cc/media/PosterPDFs/ICML%202022/7385db9a3f11415bc0e9e2625fae3734.png">poster</a>] and
+"Proximal and Federated Random Reshuffling" presented by <a href="https://www.akhaled.org">Ahmed Khaled</a> [<a href="https://proceedings.mlr.press/v162/mishchenko22a.html">paper</a>].
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 <h3>July 9, 2022</h3>
 
