--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,11 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [203] Samuel Horváth, Konstantin Mishchenko and Peter Richtárik <br>
+          <b>Adaptive learning rates for faster stochastic gradient methods</b><br>
+          [<a href="https://arxiv.org/abs/2208.05287">arXiv</a>] [code: StoPS, GraDs, StoP, GraD] <br>
+          <br>
+          
           [202] Laurent Condat and Peter Richtárik <br>
           <b>RandProx: Primal-dual optimization algorithms with randomized proximal updates</b><br>
           <span class="important">Federated Learning Paper</span><br>
