--- a/index.html
+++ b/index.html
@@ -43,6 +43,32 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+<h3>August 10, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2207.12891">
+"Adaptive Learning Rates for Faster Stochastic Gradient Methods"</a> -
+joint work with
+<a href="https://sites.google.com/view/samuelhorvath">Samuel Horváth</a> and <a href="https://www.konstmish.com">Konstantin Mishchenko</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+In this work, we propose new adaptive step size strategies that improve several stochastic gradient methods. Our first method (StoPS) is based on the classical Polyak step size (Polyak, 1987) and is an extension of the recent development of this method for the stochastic optimization-SPS (Loizou et al., 2021), and our second method, denoted GraDS, rescales step size by "diversity of stochastic gradients". We provide a theoretical analysis of these methods for strongly convex smooth functions and show they enjoy deterministic-like rates despite stochastic gradients. Furthermore, we demonstrate the theoretical superiority of our adaptive methods on quadratic objectives. Unfortunately, both StoPS and GraDS depend on unknown quantities, which are only practical for the overparametrized models. To remedy this, we drop this undesired dependence and redefine StoPS and GraDS to StoP and GraD, respectively. We show that these new methods converge linearly to the neighbourhood of the optimal solution under the same assumptions. Finally, we corroborate our theoretical claims by experimental validation, which reveals that GraD is particularly useful for deep learning optimization.  
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 <h3>July 30, 2022</h3>
 <h1>On my way back to KAUST</h1>
