--- a/i_talks.html
+++ b/i_talks.html
@@ -49,6 +49,10 @@
 <h1> Future Talks</h1>
 
 <p>
+Emerging opportunities for statistics and data sciences: data and information integration Recent works and perspectives from academia, industry, and regulatory agencies, Banff International Research Station for Mathematical Innovation and Discovery (BIRS), Summer 2024 (invited)
+</p>
+
+<p>
 <a href="https://ims.nus.edu.sg/events/optimization-in-the-big-data-era/">Optimization in the Big Data Era</a>, Institute
 for Mathematical Sciences, National University of Singapore, Singapore, December 5-9, 2022 (invited)
 </p>
@@ -66,6 +70,10 @@ Introduction to Machine Learning 1/2, Aramco, November 3-6, 2022
 </p>
 
 <p>
+MBZUAI Workshop on Collaborative Learning: From Theory to Practice, Abu Dhabi, October 8-10, 2022 (invited by Michael Jordan)
+</p>
+
+<p>
 Mathematics and Applications Colloquium, <a href="https://www.kaust.edu.sa/en">KAUST</a>, Thuwal, Saudi Arabia, September 13, 2022 (invited)
 </p>
 
@@ -80,9 +88,7 @@ Mathematics and Applications Colloquium, <a href="https://www.kaust.edu.sa/en">K
 </p>
 --->
 
-<p>
-<a href="https://icml.cc/Conferences/2022">ICML 2022</a>, Baltimore, Maryland, USA, July 17-23, 2022
-</p>
+
 
 <!---
 <p>
@@ -104,6 +110,16 @@ Università della Svizzera italiana, Lugano, Switzerland, May 9, 2022 (invited l
 
 
 <h1>2022 Talks</h1>
+
+<p>
+[211]
+<a href="https://icml.cc/Conferences/2022">ICML 2022 (Talk 2)</a>, Baltimore, Maryland, USA, July 17-23, 2022
+</p>
+
+<p>
+[210]
+<a href="https://icml.cc/Conferences/2022">ICML 2022 (Talk 1)</a>, Baltimore, Maryland, USA, July 17-23, 2022
+</p>
 
 <p>
 [209]
