--- a/index.html
+++ b/index.html
@@ -115,6 +115,28 @@ Proximal splitting algorithms are well suited to solving large-scale nonsmooth o
 <br>
 
 
+
+<h3>July 14, 2022</h3>
+
+<h1>10 Team Members Among Top 10% ICML 2022 Reviewers!</h1>
+
+Thanks to my former and current team members Konstantin Mishchenko, Rafał Szlendak, Samuel Horváth, Igor Sokolov,
+Alexander Tyurin, Abdurakhmon Sadiev, Laurent Condat, Ahmed Khaled, Eduard Gorbunov and Egor Shulgin for their
+excellet reviewing efforts for ICML 2022 which resulted in them being recognized with
+a Top 10% ICML 2022 Reviewer Award!
+
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 <h3>July 12, 2022</h3>
 
 <h1>New York, Baltimore, Houston and Los Angeles</h1>
