--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@ Proximal splitting algorithms are well suited to solving large-scale nonsmooth o
 
 <h3>July 14, 2022</h3>
 
-<h1>10 Team Members Among Top 10% ICML 2022 Reviewers!</h1>
+<h1>11 Team Members Among Top 10% ICML 2022 Reviewers!</h1>
 
 Thanks to my former and current team members Konstantin Mishchenko, Rafał Szlendak, Samuel Horváth, Igor Sokolov,
-Alexander Tyurin, Abdurakhmon Sadiev, Laurent Condat, Ahmed Khaled, Eduard Gorbunov and Egor Shulgin for their
-excellet reviewing efforts for ICML 2022 which resulted in them being recognized with
-a Top 10% ICML 2022 Reviewer Award!
+Alexander Tyurin, Abdurakhmon Sadiev, Laurent Condat, Ahmed Khaled, Eduard Gorbunov, Elnur Gasanov and Egor Shulgin for their
+excellet reviewing efforts for ICML 2022 which resulted in them being recognized as <a href="https://icml.cc/Conferences/2022/Reviewers">Outstanding
+(Top 10%) Reviewers at ICML 2022!</a>
 
 <br>
 
