--- a/i_team.html
+++ b/i_team.html
@@ -65,6 +65,15 @@
           <h2>Postdocs </h2>
 
           <ul>
+
+            <li><a href="https://combgeo.org/en/members/yury-demidovich/">Yury Demidovich</a> (9/2022-present), KAUST
+              <a href="https://scholar.google.com/citations?user=CDENSiUAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+            </li>
+
+            <li><a href="https://sarit-khirirat.netlify.app">Sarit Khirirat</a> (9/2022-present), MBZUAI
+              <a href="https://scholar.google.se/citations?user=NSFBRNAAAAAJ&hl=en"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+            </li>
+
             <li><a href="https://avetx.github.io/">Avetik Karagulyan</a> (11/2021-present), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=1-_KDtoAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
@@ -82,6 +91,14 @@
           <h2>PhD Students</h2>
 
           <ul>
+
+            <li><a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ">Abdurakhmon Sadiev</a> (9/2022-present), KAUST
+              <a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+            </li>
+
+            <li><a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ">Ivan Agarský</a> (9/2022-present), KInIT
+              <a href=""><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+            </li>            
 
             <li><a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a> (6/2022-present), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=OBbPecwAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
@@ -126,6 +143,11 @@
           <h2>MS Students </h2>
 
                 <ul>
+
+                  <li><a href="https://www.linkedin.com/in/rafał-szlendak-552936220/?originalSubdomain=uk">Rafal Szlendak</a> (8/2022-present), KAUST
+                    <a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+                  </li>
+
                 </ul>
 
 
