--- a/index.html
+++ b/index.html
@@ -45,6 +45,67 @@
 
 
 
+<h3>August 28, 2022</h3>
+<h1>The Fall 2022 Semester Begins!</h1>
+<br>
+
+
+I am back at KAUST - the Fall semester begins! I am teaching CS 331: Stochastic Gradient Descent Methods.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>August 15, 2022</h3>
+<h1>New Research Intern: Wenzi (Tom) Fang</h1>
+<br>
+
+
+I am hereby welcoming <a href="https://wenzhifang.github.io">Wenzhi (Tom) Fang</a> to my team as a (remote) VS research intern! His internship started today.
+Tom is an MS student in Communication and Information Systems at University of the Chinese Academy of Sciences / ShanghaiTech University.
+He obtained a BS degree in Communication Engineering from Shanghai University. In the past, his research focus was on optimization of the
+physical layer of wireless communication. At present, he is more interested in optimization theory and federated learning.
+<br>
+<br>
+
+Tom co-authored several papers, including:
+<ul>
+<li>W. Fang, Y. Jiang, Y. Shi, Y. Zhou, W. Chen, and K. Letaief, “Over-the-Air Computation via Reconfigurable Intelligent Surface,” IEEE Transactions on Communications, vol. 69, no. 12, pp. 8612-8626, Dec. 2021</li>
+<li>W. Fang, Y. Zou, H. Zhu, Y. Shi, and Y. Zhou, “Optimal Receive Beamforming for Over-the-Air Computation,” in Proc. IEEE SPAWC, Virtual Conferences, Sept. 2021</li>
+<li>W. Fang, M. Fu, K. Wang, Y. Shi, and Y. Zhou, “Stochastic Beamforming for Reconfigurable Intelligent Surface Aided Over-the-Air Computation,” in Proc. IEEE Globecom, Virtual Conference, Dec. 2020.</li>
+<li>W. Fang, M. Fu, Y. Shi, and Y. Zhou, “Outage Minimization for Intelligent Reflecting Surface Aided MISO Communication Systems via Stochastic Beamforming,” in Proc. IEEE SAM, Virtual Conference, Jun. 2020.</li>
+<li>W. Fang, Ziyi Yu, Yuning Jiang, Yuanming Shi, Colin N. Jones, and Yong Zhou, “Communication-Efficient Stochastic Zeroth-Order Optimization for Federated Learning,” submitted to IEEE Transactions on Signal Processing</li>
+</ul>
+
+
+<br>
+In 2021, Tom won a China National Scholarship (0.2% acceptance rate nationwide). In 2017 he won a 1st prize in the China National Undergraduate
+Electronic Design Competition.
+
+<br>
+<br>
+
+Here is Tom's:
+<ul>
+<li><a href="https://scholar.google.com/citations?user=XdUxykMAAAAJ&hl=en">Google Scholar Profile</a></li>
+<li><a href="https://wenzhifang.github.io">Website</a></li>
+<li><a href="https://wenzhifang.github.io/photos/CV_fangwenzhi.pdf">CV</a></li>
+</ul>
+
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 <h3>August 10, 2022</h3>
 
@@ -71,6 +132,8 @@ In this work, we propose new adaptive step size strategies that improve several 
 <img alt="" src="imgs/fancy-line.png" width="196" height="36">
 <br>
 <br>
+
+
 
 
 <h3>July 30, 2022</h3>
