--- a/i_talks.html
+++ b/i_talks.html
@@ -78,6 +78,11 @@ Mathematics and Applications Colloquium, <a href="https://www.kaust.edu.sa/en">K
 </p>
 
 <p>
+CS Department Seminar, Hong Kong Baptist University, Hong Kong, September 2, 2022 (invited)
+</p>
+
+
+<p>
 <a href="https://crossfl2022.github.io">CrossFL: Cross-Community Federated Learning: Algorithms, Systems and Co-designs</a>,
   A workshop associated with the <a href="https://mlsys.org">MLSys</a> conference, Santa Clara, USA, September 1, 2022 (keynote)
 </p>
