--- a/i_talks.html
+++ b/i_talks.html
@@ -62,6 +62,10 @@ Introduction to Machine Learning 2/2, Aramco, November 17-20, 2022
 </p>
 
 <p>
+Google 2022 Workshop on Federated Learning and Analytics, November 9-10, 2022 (invited)
+</p>
+
+<p>
 Introduction to Machine Learning 1/2, Aramco, November 3-6, 2022
 </p>
 
