--- a/i_team.html
+++ b/i_team.html
@@ -96,7 +96,7 @@
               <a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
-            <li><a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ">Ivan Agarský</a> (9/2022-present), KInIT
+            <li><a href="https://kinit.sk/member/ivan-agarsky/">Ivan Agarský</a> (9/2022-present), KInIT
               <a href=""><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
@@ -433,7 +433,7 @@
           <h2> Research Interns</h2>
 
           <ul>
-            <li><a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a> (2/2022-7/2022), from MIPT <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a></li>            
+            <li><a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a> (2/2022-7/2022), from MIPT <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a></li>
             <li><a href="https://scholar.google.com/citations?user=BFCHfngAAAAJ&hl=en">Navish Kumar</a> (IIT Kharagpur), 11/2021-2/2022
               <a href="https://scholar.google.com/citations?hl=en&user=BFCHfngAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
