2 new papers on arXiv, plus 12 NeurIPS 2022 papers.

--- a/i_papers.html
+++ b/i_papers.html
@@ -53,11 +53,21 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [205] Soumia Boucherouite, Grigory Malinovsky, Peter Richtárik and El Houcine Bergou<br>
+          <b>Minibatch stochastic three points method for unconstrained smooth minimization</b><br>
+          [<a href="https://arxiv.org/abs/2209.07883">arXiv</a>] [code: MiSTP] <br>
+          <br>
+          
+          [204] El Houcine Bergou, Konstantin Burlachenko, Aritra Dutta and Peter Richtárik <br>
+          <b>Personalized federated learning with communication compression</b><br>
+          [<a href="https://arxiv.org/abs/2209.05148">arXiv</a>] [code: Compressed L2GD] <br>
+          <br>
+
           [203] Samuel Horváth, Konstantin Mishchenko and Peter Richtárik <br>
           <b>Adaptive learning rates for faster stochastic gradient methods</b><br>
           [<a href="https://arxiv.org/abs/2208.05287">arXiv</a>] [code: StoPS, GraDs, StoP, GraD] <br>
           <br>
-          
+
           [202] Laurent Condat and Peter Richtárik <br>
           <b>RandProx: Primal-dual optimization algorithms with randomized proximal updates</b><br>
           <span class="important">Federated Learning Paper</span><br>
