--- a/index.html
+++ b/index.html
@@ -44,6 +44,202 @@
         <div id="content">
 
 
+<h3>September 16, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2209.07883">
+"Minibatch Stochastic Three Points Method for Unconstrained Smooth Minimization"</a> -
+joint work with
+<a href="https://www.linkedin.com/in/soumia-boucherouite/?originalSubdomain=ma">Soumia Boucherouite</a>,
+<a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a>,
+and <a href="https://ehbergou.github.io">El Houcine Bergou</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+In this paper, we propose a new zero order optimization method called minibatch stochastic three points (MiSTP) method to solve an unconstrained minimization problem in a setting where only an approximation of the objective function evaluation is possible. It is based on the recently proposed stochastic three points (STP) method (Bergou et al., 2020). At each iteration, MiSTP generates a random search direction in a similar manner to STP, but chooses the next iterate based solely on the approximation of the objective function rather than its exact evaluations. We also analyze our method's complexity in the nonconvex and convex cases and evaluate its performance on multiple machine learning tasks.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>September 15, 2021</h3>
+<h1>Papers Accepted to NeurIPS 2022</h1>
+<br>
+We've had several papers accepted to the <a href="https://nips.cc/Conferences/2022">36th Annual Conference on Neural Information Processing Systems (NeurIPS 2022)</a>, which will run during November 28-December 3, 2022 in New Orleans, USA.
+
+<br><br>
+Here they are:
+
+<br>
+<br>
+<img alt="KAUST Optimization and Machine Learning Lab" src="imgs/OML-richtarik-NeurIPS2022.jpeg" width="720">
+<br>
+<br>
+
+
+<b> 1) "Accelerated Primal-Dual Gradient Method for Smooth and Convex-Concave Saddle-Point Problems with Bilinear Coupling"</b>
+<a href="https://arxiv.org/abs/2112.15199">[arXiv]</a>  -
+joint work with
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a> and
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+<br>
+<br>
+
+<b> 2) "The First Optimal Algorithm for Smooth and Strongly-Convex-Strongly-Concave Minimax Optimization"</b>
+<a href="https://arxiv.org/abs/2205.05653">[arXiv]</a>  -
+the work of
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a> and
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+<br>
+<br>
+
+<b> 3) "A Damped Newton Method Achieves Global $O(1/k^2)$ and Local Quadratic Convergence Rate"</b> -
+joint work with
+<a href="https://slavomir-hanzely.github.io/">Slavomir Hanzely (*)</a>
+<a href="https://www.researchgate.net/profile/Dmitry-Kamzolov">Dmitry Kamzolov</a>
+<a href="http://dmivilensky.ru/">Dmitry Pasechnyuk</a>
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>, and
+<a href="https://mtakac.com/">Martin Takáč</a>.
+<br>
+<br>
+
+<b> 4) "Variance Reduced ProxSkip: Algorithm, Theory and Application to Federated Learning"</b>
+<a href="https://arxiv.org/abs/2207.04338">[arXiv]</a>  -
+joint work with
+<a href="https://grigory-malinovsky.github.io/">Grigory Malinovsky (*)</a> and
+<a href="https://kaiyi.me/">Kai Yi (*)</a>.
+<br>
+<br>
+
+<b> 5) "Theoretically Better and Numerically Faster Distributed Optimization with Smoothness-Aware Quantization Techniques"</b>
+<a href="https://arxiv.org/abs/2106.03524">[arXiv]</a>  -
+joint work with
+<a href="https://bokun-wang.github.io/">Bokun Wang (*)</a> and
+<a href="https://mher-safaryan.github.io/">Mher Safaryan (*)</a>.
+<br>
+<br>
+
+<b> 6) "Communication Acceleration of Local Gradient Methods via an Accelerated Primal-Dual Algorithm with an Inexact Prox"</b>
+<a href="https://arxiv.org/abs/2207.03957">[arXiv]</a>  -
+joint work with
+<a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev (*)</a> and
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a>.
+<br>
+<br>
+
+<b> 7) "Distributed Methods with Compressed Communication for Solving Variational Inequalities, with Theoretical Guarantees"</b>
+<a href="https://arxiv.org/abs/2110.03313">[arXiv]</a>  -
+joint work with
+<a href="https://anbeznosikov.github.io/">Aleksandr Beznosikov</a>,
+<a href="https://www.hse.ru/en/staff/yhn112">Michael Diskin</a>,
+<a href="https://scholar.google.com/citations?user=930PERsAAAAJ&hl=en">Max Ryabinin</a> and
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+<br>
+<br>
+
+<b> 8) "BEER: Fast $O(1/T)$ Rate for Decentralized Nonconvex Optimization with Communication Compression"</b>
+<a href="https://arxiv.org/abs/2201.13320">[arXiv]</a>  -
+joint work with
+<a href="https://hyzhao.me/">Haoyu Zhao</a>,
+<a href="https://www.lti.cs.cmu.edu/people/222218029/boyue-li">Boyue Li</a>,
+<a href="https://zhizeli.github.io/">Zhize Li (*)</a> and
+<a href="https://users.ece.cmu.edu/~yuejiec/">Yuejie Chi</a>.
+<br>
+<br>
+
+<b> 9) "The First Optimal Acceleration of High-Order Methods in Smooth Convex Optimization"</b>
+<a href="https://arxiv.org/abs/2205.09647">[arXiv]</a>  -
+the work of
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a> and
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+<br>
+<br>
+
+<b> 10) "Optimal Gradient Sliding and its Application to Optimal Distributed Optimization Under Similarity"</b>
+<a href="https://arxiv.org/abs/2205.15136">[arXiv]</a>  -
+the work of
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a>,
+<a href="https://anbeznosikov.github.io/">Aleksandr Beznosikov</a>,
+<a href="https://scholar.google.be/citations?user=9Dapoy8AAAAJ&hl=fr">Ekaterina Borodich</a>,
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a> and
+<a href="https://engineering.purdue.edu/~gscutari/">Gesualdo Scutari</a>.
+<br>
+<br>
+
+<b> 11) "Optimal Algorithms for Decentralized Stochastic Variational Inequalities"</b>
+<a href="https://arxiv.org/abs/2202.02771">[arXiv]</a>  -
+joint work with
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a>,
+<a href="https://anbeznosikov.github.io/">Aleksandr Beznosikov</a>,
+<a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev (*)</a>,
+<a href="https://engineering.purdue.edu/~gscutari/"> Michael Persiianov</a> and
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+<br>
+<br>
+
+<b> 12) "EF-BV: A Unified Theory of Error Feedback and Variance Reduction Mechanisms for Biased and Unbiased Compression in
+Distributed Optimization"</b>
+<a href="https://arxiv.org/abs/2205.04180">[arXiv]</a>  -
+joint work with
+<a href="https://lcondat.github.io/">Laurent Condat (*)</a> and
+<a href="https://kaiyi.me/">Kai Yi (*)</a>.
+<br>
+<br>
+
+<br><br>
+(*) Members of my Optimization and Machine Learning Lab at KAUST.
+<br><br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+<h3>September 12, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2209.05148">
+"Personalized Federated Learning with Communication Compression"</a> -
+joint work with
+<a href="https://ehbergou.github.io">El Houcine Bergou</a>,
+<a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a>,
+and <a href="http://www.aritradutta.com">Aritra Dutta</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+In contrast to training traditional machine learning (ML) models in data centers, federated learning (FL) trains ML models over local datasets contained on resource-constrained heterogeneous edge devices. Existing FL algorithms aim to learn a single global model for all participating devices, which may not be helpful to all devices participating in the training due to the heterogeneity of the data across the devices. Recently, Hanzely and Richtárik (2020) proposed a new formulation for training personalized FL models aimed at balancing the trade-off between the traditional global model and the local models that could be trained by individual devices using their private data only. They derived a new algorithm, called Loopless Gradient Descent (L2GD), to solve it and showed that this algorithms leads to improved communication complexity guarantees in regimes when more personalization is required. In this paper, we equip their L2GD algorithm with a bidirectional compression mechanism to further reduce the communication bottleneck between the local devices and the server. Unlike other compression-based algorithms used in the FL-setting, our compressed L2GD algorithm operates on a probabilistic communication protocol, where communication does not happen on a fixed schedule. Moreover, our compressed L2GD algorithm maintains a similar convergence rate as vanilla SGD without compression. To empirically validate the efficiency of our algorithm, we perform diverse numerical experiments on both convex and non-convex problems and using various compression techniques.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 <h3>August 28, 2022</h3>
 <h1>The Fall 2022 Semester Begins!</h1>
