--- a/i_papers.html
+++ b/i_papers.html
@@ -57,9 +57,10 @@
           <b>Minibatch stochastic three points method for unconstrained smooth minimization</b><br>
           [<a href="https://arxiv.org/abs/2209.07883">arXiv</a>] [code: MiSTP] <br>
           <br>
-          
+
           [204] El Houcine Bergou, Konstantin Burlachenko, Aritra Dutta and Peter Richtárik <br>
           <b>Personalized federated learning with communication compression</b><br>
+          <span class="important">Federated Learning Paper</span><br>          
           [<a href="https://arxiv.org/abs/2209.05148">arXiv</a>] [code: Compressed L2GD] <br>
           <br>
 
@@ -159,6 +160,7 @@
 
           [187] Samuel Horváth, Maziar Sanjabi, Lin Xiao, Peter Richtárik and Michael Rabbat<br>
           <b>FedShuffle: Recipes for better use of local work in federated learning</b><br>
+          Accepted to Transactions on Machine Learning Research (TMLR), 2022 <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2204.13169">arXiv</a>] [code: FedShuffle] <br>
           <br>
@@ -432,6 +434,7 @@
 
           [146] Wenlin Chen, Samuel Horváth, and Peter Richtárik<br>
           <b>Optimal client sampling for federated learning</b><br>
+          <a href="https://openreview.net/pdf?id=8GvRCWKHIL">Transactions on Machine Learning Research (TMLR), 2022</a> <br>
           <a href="https://ppml-workshop.github.io/#papers">Privacy Preserving Machine Learning (NeurIPS 2020 Workshop)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2010.13723">arXiv</a>] [code: OCS, AOCS]  <br>
