--- a/i_talks.html
+++ b/i_talks.html
@@ -53,12 +53,16 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
+Research Seminar, Rice University, Houston, USA, January 20, 2022 (invited by Shiqian Ma)
+</p>
+
+<p>
 <a href="https://ims.nus.edu.sg/events/optimization-in-the-big-data-era/">Optimization in the Big Data Era</a>, Institute
 for Mathematical Sciences, National University of Singapore, Singapore, December 5-9, 2022 (invited)
 </p>
 
 <p>
-Introduction to Machine Learning 2/2, Aramco, November 17-20, 2022
+Introduction to Optimization 2/2, Aramco, November 17-20, 2022
 </p>
 
 <p>
@@ -66,7 +70,7 @@ Google 2022 Workshop on Federated Learning and Analytics, November 9-10, 2022 (i
 </p>
 
 <p>
-Introduction to Machine Learning 1/2, Aramco, November 3-6, 2022
+Introduction to Optimization 1/2, Aramco, November 3-6, 2022
 </p>
 
 <p>
@@ -75,6 +79,10 @@ Introduction to Machine Learning 1/2, Aramco, November 3-6, 2022
 
 <p>
 MBZUAI Workshop on Collaborative Learning: From Theory to Practice, Abu Dhabi, October 8-10, 2022 (invited by Michael Jordan)
+</p>
+
+<p>
+<a href="https://www.oneworldml.org/home">One World Seminar Series on the Mathematics of Machine Learning</a>, virtual, October 5, 2022 (invited)
 </p>
 
 <p>
