--- a/i_papers.html
+++ b/i_papers.html
@@ -60,7 +60,7 @@
 
           [204] El Houcine Bergou, Konstantin Burlachenko, Aritra Dutta and Peter Richtárik <br>
           <b>Personalized federated learning with communication compression</b><br>
-          <span class="important">Federated Learning Paper</span><br>          
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2209.05148">arXiv</a>] [code: Compressed L2GD] <br>
           <br>
 
@@ -160,7 +160,7 @@
 
           [187] Samuel Horváth, Maziar Sanjabi, Lin Xiao, Peter Richtárik and Michael Rabbat<br>
           <b>FedShuffle: Recipes for better use of local work in federated learning</b><br>
-          Accepted to Transactions on Machine Learning Research (TMLR), 2022 <br>
+          <a href="https://openreview.net/pdf?id=Lgs5pQ1v30">Transactions on Machine Learning Research (TMLR), 09/2022</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2204.13169">arXiv</a>] [code: FedShuffle] <br>
           <br>
@@ -788,8 +788,8 @@
 
           [94] Samuel Horváth, Dmitry Kovalev, Konstantin Mishchenko,
           Peter Richtárik and Sebastian Stich<br>
-          <b>Stochastic distributed learning with gradient quantization and variance reduction</b><br>
-          To appear in Optimization Methods and Software, 2022 <br>
+          <b>Stochastic distributed learning with gradient quantization and double variance reduction</b><br>
+          <a href="https://www.tandfonline.com/doi/full/10.1080/10556788.2022.2117355">Optimization Methods and Software, 2022</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/1904.05115">arXiv</a>] [code:
           DIANA, VR-DIANA, SVRG-DIANA]<br>
