--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,16 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [207] Lukang Sun and Peter Richtárik<br>
+          <b>Improved Stein variational gradient descent with importance weights</b><br>
+          [<a href="https://arxiv.org/abs/2210.00462">arXiv</a>] [code: beta-SVGD]<br>
+          <br>
+
+          [206] Kaja Gruntkowska, Alexander Tyurin and Peter Richtárik<br>
+          <b>EF21-P and friends: Improved theoretical communication complexity for distributed optimization with bidirectional compression</b><br>
+          [<a href="https://arxiv.org/abs/2209.15218">arXiv</a>] [code: EF21-P, EF21-P + DIANA, EF21-P + DCGD]<br>
+          <br>
+
           [205] Soumia Boucherouite, Grigory Malinovsky, Peter Richtárik and El Houcine Bergou<br>
           <b>Minibatch stochastic three points method for unconstrained smooth minimization</b><br>
           [<a href="https://arxiv.org/abs/2209.07883">arXiv</a>] [code: MiSTP] <br>
@@ -711,6 +721,7 @@
 
           [105] Aritra Dutta, El Houcine Bergou, Yunming Xiao, Marco Canini and Peter Richtárik<br>
           <b>Direct nonlinear acceleration</b><br>
+          Accepted to EURO Journal on Computational Optimization, 2022 <br>
           [<a href="https://arxiv.org/abs/1905.11692">arXiv</a>] [code:
           DNA]<br>
           <br>
