--- a/index.html
+++ b/index.html
@@ -44,6 +44,95 @@
         <div id="content">
 
 
+<h3>October 5, 2022</h3>
+
+<h1>Talk at the One World Seminar Series on the Mathematics of Machine Learning</h1>
+
+Today, I am  giving a virtual (Zoom) talk at the <a href="https://www.oneworldml.org/home">One World Seminar Series on the Mathematics of Machine Learning</a>.
+
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>October 2, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2210.00462">
+"Improved Stein Variational Gradient Descent with Importance Weights"</a> -
+joint work with
+<a href="https://lukangsun.github.io">Lukang Sun</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+Stein Variational Gradient Descent~(SVGD) is a popular sampling algorithm used in various machine learning tasks. It is well known that SVGD arises from a discretization of the kernelized gradient flow of the Kullback-Leibler divergence $D_{KL}(\cdot\mid\pi)$, where $\pi$ is the target distribution. In this work, we propose to enhance SVGD via the introduction of  importance weights, which leads to a new method for which we coin the name $\beta$-SVGD. In the continuous time and infinite particles regime, the time for this flow to converge to the equilibrium distribution $\pi$, quantified by the Stein Fisher information, depends on $\rho_0$ and $\pi$ very weakly. This is very different from the kernelized gradient flow of Kullback-Leibler divergence, whose time complexity depends on $D_{KL}(\rho_0\mid\pi)$. Under certain assumptions, we provide a descent lemma for the population limit $\beta$-SVGD, which covers the descent lemma for the population limit SVGD when $\beta\to 0$. We also illustrate the advantages of $\beta$-SVGD over SVGD by simple experiments.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>September 30, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2209.15218">
+"EF21-P and Friends: Improved Theoretical Communication Complexity for Distributed Optimization with Bidirectional Compression"</a> -
+joint work with
+Kaja Gruntkowska and <a href="https://k3nfalt.github.io">Alexander Tyurin</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+The starting point of this paper is the discovery of a novel and simple error-feedback mechanism, which we call EF21-P, for dealing with the error introduced by a contractive compressor. Unlike all prior works on error feedback, where compression and correction operate in the dual space of gradients, our mechanism operates in the primal space of models. While we believe that EF21-P may be of interest in many situations where it is often advantageous to perform model perturbation prior to the computation of the gradient (e.g., randomized smoothing and generalization), in this work we focus our attention on its use as a key building block in the design of communication-efficient distributed optimization methods supporting bidirectional compression. In particular, we employ EF21-P as the mechanism for compressing and subsequently error-correcting the model broadcast by the server to the workers. By combining EF21-P with suitable methods performing worker-to-server compression, we obtain novel methods supporting bidirectional compression and enjoying new state-of-the-art theoretical communication complexity for convex and nonconvex problems. For example, our bounds are the first that manage to decouple the variance/error coming from the workers-to-server and server-to-workers compression, transforming a multiplicative dependence to an additive one. In the convex regime, we obtain the first bounds that match the theoretical communication complexity of gradient descent. Even in this convex regime, our algorithms work with biased gradient estimators, which is non-standard and requires new proof techniques that may be of independent interest. Finally, our theoretical results are corroborated through suitable experiments.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>September 29, 2022</h3>
+
+<h1>ICLR 2023</h1>
+
+The ICLR 2023 submission deadline is over. Time to rest for a day before moving on to AISTATS 2023...
+
+
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>September 16, 2022</h3>
 
 <h1>New Paper</h1>
@@ -208,6 +297,22 @@ joint work with
 <br>
 <br>
 
+
+
+
+<h3>September 13, 2022</h3>
+
+<h1>Talk at the Mathematics and Applications Colloquium</h1>
+
+I am giving a talk at the <a href="https://cemse.kaust.edu.sa/events/event/resolution-theoretical-question-related-nature-local-training-federated-learning">Mathematics and Applications Colloquium</a> at KAUST.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
 
