--- a/i_talks.html
+++ b/i_talks.html
@@ -46,7 +46,7 @@
         <div id="content">
 
 
-<h1> Future Talks</h1>
+<h1>Future Talks</h1>
 
 <p>
 Emerging opportunities for statistics and data sciences: data and information integration Recent works and perspectives from academia, industry, and regulatory agencies, Banff International Research Station for Mathematical Innovation and Discovery (BIRS), Summer 2024 (invited)
@@ -66,7 +66,7 @@ Introduction to Optimization 2/2, Aramco, November 17-20, 2022
 </p>
 
 <p>
-Google 2022 Workshop on Federated Learning and Analytics, November 9-10, 2022 (invited)
+Google 2022 Workshop on Federated Learning and Analytics, November 9-10, 2022 (invited by Peter Kairouz)
 </p>
 
 <p>
@@ -81,47 +81,18 @@ Introduction to Optimization 1/2, Aramco, November 3-6, 2022
 MBZUAI Workshop on Collaborative Learning: From Theory to Practice, Abu Dhabi, October 8-10, 2022 (invited by Michael Jordan)
 </p>
 
-<p>
-<a href="https://www.oneworldml.org/home">One World Seminar Series on the Mathematics of Machine Learning</a>, virtual, October 5, 2022 (invited)
-</p>
-
-
-
-<!---
-<p>
-<a href="https://iccopt2022.lehigh.edu">International Conference on Continuous Optimization (ICCOPT)</a>, Lehigh, USA, July 25-28, 2022 (invited)
-</p>
---->
-
-
-
-<!---
-<p>
-<a href="https://orcos.tuwien.ac.at/events/vc2022/">15th Viennese Conference on Optimal Control and Dynamic Games</a>, Session: Continuous Optimization: Theory and Applications (organized by Bot and Daniilidis), Vienna, Austria, July 12-15, 2022 (invited)
-</p>
---->
-
-
-
-
-
-<!--- <p> Spring School, <a href="https://ai-dd.eu">Advanced machine learning for Innovative Drug Discovery (AIDD)</a>,
-Università della Svizzera italiana, Lugano, Switzerland, May 9, 2022 (invited lecture)
-</p>
---->
-
-
-
-
 
 <h1>2022 Talks</h1>
+
+<p>
+[215]
+<a href="https://www.oneworldml.org/home">One World Seminar Series on the Mathematics of Machine Learning</a>, virtual, October 5, 2022 (invited)
+</p>
 
 <p>
 [214]
 Mathematics and Applications Colloquium, <a href="https://www.kaust.edu.sa/en">KAUST</a>, Thuwal, Saudi Arabia, September 13, 2022 (invited)
 </p>
-
-
 
 <p>
 [213]
