--- a/i_consulting.html
+++ b/i_consulting.html
@@ -33,9 +33,9 @@
         <li><a href="i_oldnews.html">Old News</a></li>
         <li><a href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
-        <li><a href="i_videotalks.html">Video Talks</a></li>        
+        <li><a href="i_videotalks.html">Video Talks</a></li>
         <li><a href="i_events.html">Events</a></li>
-        <li><a href="i_seminar.html">Seminar</a></li>
+      <!--  <li><a href="i_seminar.html">Seminar</a></li> !-->
         <li><a href="i_software.html">Code</a></li>
         <li><a href="i_team.html">Team</a></li>
         <li><a href="i_join.html">Join</a></li>
