--- a/i_seminar.html
+++ b/i_seminar.html
@@ -32,7 +32,7 @@
         <li><a href="i_oldnews.html">Old News</a></li>
         <li><a href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
-        <li><a href="i_videotalks.html">Video Talks</a></li>        
+        <li><a href="i_videotalks.html">Video Talks</a></li>
         <li><a href="i_events.html">Events</a></li>
         <li><a class="active" href="i_seminar.html">Seminar</a></li>
         <li><a href="i_software.html">Code</a></li>
@@ -48,14 +48,7 @@
             2018-2019 </h2>
           <strong>Venue:</strong> <a
             href="http://www.ed.ac.uk/maps?building=james-clerk-maxwell-building">Al
-Khwarizmi
-
-
-
-
-
-
-            Building</a>, KAUST, ROOM: 2107 (2nd floor)<br>
+Khwarizmi Building</a>, KAUST, ROOM: 2107 (2nd floor)<br>
           <strong>Time:</strong> Sundays 12:00 - 13:30 (lunch provided)
           <br>
           <br>
