--- a/i_talks.html
+++ b/i_talks.html
@@ -34,7 +34,7 @@
         <li><a class="active" href="i_talks.html">Talks</a></li>
         <li><a href="i_videotalks.html">Video Talks</a></li>
         <li><a href="i_events.html">Events</a></li>
-        <li><a href="i_seminar.html">Seminar</a></li>
+      <!--  <li><a href="i_seminar.html">Seminar</a></li> !-->
         <li><a href="i_software.html">Code</a></li>
         <li><a href="i_team.html">Team</a></li>
         <li><a href="i_join.html">Join</a></li>
@@ -53,12 +53,20 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
-Research Seminar, Rice University, Houston, USA, January 20, 2022 (invited by Shiqian Ma)
+Research Seminar, Rice University, Houston, USA, January 20, 2023 (invited by Shiqian Ma)
+</p>
+
+<p>
+DistributedML Seminar, Virtual, Qualcomm AI Research, 2023
 </p>
 
 <p>
 <a href="https://ims.nus.edu.sg/events/optimization-in-the-big-data-era/">Optimization in the Big Data Era</a>, Institute
 for Mathematical Sciences, National University of Singapore, Singapore, December 5-9, 2022 (invited)
+</p>
+
+<p>
+NeurIPS 2022, New Orleans, USA, November 2022
 </p>
 
 <p>
@@ -73,16 +81,17 @@ Google 2022 Workshop on Federated Learning and Analytics, November 9-10, 2022 (i
 Introduction to Optimization 1/2, Aramco, November 3-6, 2022
 </p>
 
-<p>
+<!-- <p>
 <a href="https://irdta.eu/deeplearn/2022au/">7th International School on Deep Learning (DeepLearn 2022 Autumn)</a>, Luleå, Sweden, October 17-21, 2022 (invited 4.5h mini-course on Federated Learning)
 </p>
-
-<p>
-MBZUAI Workshop on Collaborative Learning: From Theory to Practice, Abu Dhabi, October 8-10, 2022 (invited by Michael Jordan)
-</p>
-
+!-->
 
 <h1>2022 Talks</h1>
+
+<p>
+[216]
+MBZUAI Workshop on Collaborative Learning: From Theory to Practice, Abu Dhabi, October 8-10, 2022 (invited by Michael Jordan)
+</p>
 
 <p>
 [215]
