--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="i_talks.html">Talks</a></li>
         <li><a href="i_videotalks.html">Video Talks</a></li>
         <li><a href="i_events.html">Events</a></li>
-        <li><a href="i_seminar.html">Seminar</a></li>
+      <!--  <li><a href="i_seminar.html">Seminar</a></li> !-->
         <li><a href="i_software.html">Code</a></li>
         <li><a href="i_team.html">Team</a></li>
         <li><a href="i_join.html">Join</a></li>
@@ -42,6 +42,22 @@
       </ul>
       <div id="wrapper" class="main">
         <div id="content">
+
+
+<h3>October 6, 2022</h3>
+
+<h1>Visiting MBZUAI in Abu Dhabi</h1>
+
+I am on my way to Abu Dhabi to visit <a href="https://mbzuai.ac.ae">MBZUAI</a>, where I am an Adjunct Professor.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 
 <h3>October 5, 2022</h3>
