--- a/i_events.html
+++ b/i_events.html
@@ -34,7 +34,7 @@
         <li><a href="i_talks.html">Talks</a></li>
         <li><a href="i_videotalks.html">Video Talks</a></li>
         <li><a class="active" href="i_events.html">Events</a></li>
-        <li><a href="i_seminar.html">Seminar</a></li>
+      <!--  <li><a href="i_seminar.html">Seminar</a></li> !-->
         <li><a href="i_software.html">Code</a></li>
         <li><a href="i_team.html">Team</a></li>
         <li><a href="i_join.html">Join</a></li>
