--- a/index.html
+++ b/index.html
@@ -44,6 +44,34 @@
         <div id="content">
 
 
+<h3>October 24, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2210.13277">
+"Provably Doubly Accelerated Federated Learning: The First Theoretically Successful Combination of Local Training and Compressed Communication"</a> -
+joint work with
+<a href="https://lcondat.github.io">Laurent Condat</a> and <a href="https://kinit.sk/member/ivan-agarsky/">Ivan Agarský</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+In the modern paradigm of federated learning, a large number of users are involved in a global learning task, in a collaborative way. They alternate local computations and two-way communication with a distant orchestrating server. Communication, which can be slow and costly, is the main bottleneck in this setting. To reduce the communication load and therefore accelerate distributed gradient descent, two strategies are popular: 1) communicate less frequently; that is, perform several iterations of local computations between the communication rounds; and 2) communicate compressed information instead of full-dimensional vectors. In this paper, we propose the first algorithm for distributed optimization and federated learning, which harnesses these two strategies jointly and converges linearly to an exact solution, with a doubly accelerated rate: our algorithm benefits from the two acceleration mechanisms provided by local training and compression, namely a better dependency on the condition number of the functions and on the dimension of the model, respectively.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>October 6, 2022</h3>
 
 <h1>Visiting MBZUAI in Abu Dhabi</h1>
