--- a/i_papers.html
+++ b/i_papers.html
@@ -53,13 +53,21 @@
 
           <h1> Prepared in 2022 </h1>
 
+<!--
           [?] Slavomír Hanzely, Dmitry Kamzolov, Dmitry Pasechnyuk, Alexander Gasnikov, Peter Richtárik and Martin Takáč <br>
           <b>A damped Newton method achieves global $0(1/k^2)$ and local quadratic convergence rate</b><br>
           Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
           [<a href="">arXiv</a>] <br>
           <br>
+!-->
 
-          [208] Laurent Condat, Ivan Agarský Peter Richtárik <br>
+          [209] Artavazd Maranjyan, Mher Safaryan and Peter Richtárik <br>
+          <b>GradSkip: Communication-accelerated local gradient mthods with better computational complexity</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2210.16402">arXiv</a>] [code: GradSkip, GradSkip+] <br>
+          <br>
+
+          [208] Laurent Condat, Ivan Agarský and Peter Richtárik <br>
           <b>Provably doubly accelerated federated learning: the first theoretically successful combination of local training and compressed communication</b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2210.13277">arXiv</a>] [code: CompressedScaffnew] <br>
