--- a/index.html
+++ b/index.html
@@ -44,6 +44,54 @@
         <div id="content">
 
 
+
+<h3>November 2, 2022</h3>
+
+<h1>Teaching at Saudi Aramco</h1>
+
+Just arrived to Al Khobar, a Saudi Arabian city on the Arabian Gulf. I will be teaching "Introduction to Optimization" in a
+KAUST-Aramco MS program that started this year. My PhD students <a href="https://cemse.kaust.edu.sa/amcs/people/person/igor-sokolov">Igor Sokolov</a> and
+<a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> are here with me as TAs. Four full days of teaching (6 hrs a day), and then four
+more at the end of November. Should be fun!
+</a>.
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>October 28, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2210.13277">
+"GradSkip: Communication-Accelerated Local Gradient Methods with Better Computational Complexity"</a> -
+joint work with
+<a href="https://www.linkedin.com/in/arto-maranjyan/?originalSubdomain=am">Artavazd Maranjyan</a> and <a href="https://mher-safaryan.github.io">Mher Safaryan</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+In this work, we study distributed optimization algorithms that reduce the high communication costs of synchronization by allowing clients to perform multiple local gradient steps in each communication round. Recently, Mishchenko et al. (2022) proposed a new type of local method, called ProxSkip, that enjoys an accelerated communication complexity without any data similarity condition. However, their method requires all clients to call local gradient oracles with the same frequency. Because of statistical heterogeneity, we argue that clients with well-conditioned local problems should compute their local gradients less frequently than clients with ill-conditioned local problems. Our first contribution is the extension of the original ProxSkip method to the setup where clients are allowed to perform a different number of local gradient steps in each communication round. We prove that our modified method, GradSkip, still converges linearly, has the same accelerated communication complexity, and the required frequency for local gradient computations is proportional to the local condition number. Next, we generalize our method by extending the randomness of probabilistic alternations to arbitrary unbiased compression operators and considering a generic proximable regularizer. This generalization, GradSkip+, recovers several related methods in the literature. Finally, we present an empirical study to confirm our theoretical claims.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>October 24, 2022</h3>
 
 <h1>New Paper</h1>
