--- a/i_papers.html
+++ b/i_papers.html
@@ -53,13 +53,11 @@
 
           <h1> Prepared in 2022 </h1>
 
-<!--
-          [?] Slavomír Hanzely, Dmitry Kamzolov, Dmitry Pasechnyuk, Alexander Gasnikov, Peter Richtárik and Martin Takáč <br>
+          [210] Slavomír Hanzely, Dmitry Kamzolov, Dmitry Pasechnyuk, Alexander Gasnikov, Peter Richtárik and Martin Takáč <br>
           <b>A damped Newton method achieves global $0(1/k^2)$ and local quadratic convergence rate</b><br>
           Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
-          [<a href="">arXiv</a>] <br>
+          [<a href="https://arxiv.org/abs/2211.00140">arXiv</a>] <br>
           <br>
-!-->
 
           [209] Artavazd Maranjyan, Mher Safaryan and Peter Richtárik <br>
           <b>GradSkip: Communication-accelerated local gradient mthods with better computational complexity</b><br>
@@ -356,7 +354,7 @@
 
           [163] Laurent Condat and Peter Richtárik<br>
           <b>MURANA: A generic framework for stochastic variance-reduced optimization</b><br>
-          Mathematical and Scientific Machine Learning 2022 (MSML 2022) <br>
+          <a href="https://proceedings.mlr.press/v190/horvoth22a.html">Mathematical and Scientific Machine Learning 2022 (MSML 2022) </a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2106.03056">arXiv</a>] [code: MURANA, ELVIRA]<br>
           <br>
